# nbdiff-web-exporter

./: .gitignore  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: tests.yml
data/: notebook.ipynb
nbdiff_web_exporter/: nbdiff_web_exporter.py  ops_browser.py
tests/: test_nbdiff_web_exporter.py
